Thu Dec 17 03:52:10 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_make_env_each): should not compare with Qfalse and FALSE.
	  Pointed at http://d.hatena.ne.jp/nagachika/20151216/ruby_trunk_changes_53128_53163

Thu Dec 17 03:15:25 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method_each_type): should not set fastpath
	  with keyword arguments for VM_METHOD_TYPE_ATTRSET type methods.

	  Normally, we can not use keyword arguments for this kind of methods,
	  (obj.foo = 1), but we can set alias names for them.
	  [Bug #11657]

	* test/ruby/test_keyword.rb: add a test for this fix.

Wed Dec 16 20:32:43 2015  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* ext/fiddle/handle.c: check tainted string arguments.
	  Patch provided by tenderlove and nobu.

	* test/fiddle/test_handle.rb (class TestHandle): add test for above.


Wed Dec 16 19:30:56 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm.c (vm_make_proc_from_block): should convert a Symbol to a Proc.
	  [ruby-core:72083] [Bug #11811]

Wed Dec 16 16:17:34 2015  Eric Wong  <e@80x24.org>

	* test/ruby/test_io.rb: fix spelling errors

Wed Dec 16 16:04:49 2015  Eric Wong  <e@80x24.org>

	* NEWS: note IO#advise change [ruby-core:72168]

Wed Dec 16 15:35:13 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c: fix mark miss for proc given as passed block.
	  [Bug #11750]

	* vm.c (vm_make_proc_from_block): should return a Proc object
	  if block is given. Previous implementation returns
	  a Proc object only when corresponding Proc object is not
	  available.

	* vm.c (vm_make_env_each): ditto.

	* test/ruby/test_proc.rb: add a test for this bug.

Wed Dec 16 12:24:59 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* test_struct.rb: Test that initialize is overridable [#11708]

Wed Dec 16 10:49:51 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (block_command, block_call): fix `&.` calls after
	  block_call.  [Feature #11537]

Wed Dec 16 00:53:45 2015  Naohisa Goto  <ngotogenome@gmail.com>
